import React from 'react';
import { mount, ReactWrapper } from 'enzyme';
import { Select } from './';
import { render, act, fireEvent } from '@testing-library/react';

test('renders learn react link', (done) => {
  const onChange = jest.fn();
  const { container } = render(
    <Select label="myLabel" onChange={onChange} options={['cookie', 'pizza']} />
  );

  const select = container.children[0].querySelector('select');

  fireEvent.change(container);

  act(() => {
    window.requestAnimationFrame(() => {
      fireEvent.change(select!);
      expect(onChange).toHaveBeenCalled();
      done();
    });
  });
});

describe('Select', () => {
  it('renders', () => {
    mount(
      <Select
        placeholder="Select a food"
        options={{ 1: 'Cookies', 2: 'Pizza', 3: 'Icecream' }}
      />
    );
  });

  it('helpText', () => {
    const el = mount(
      <div>
        <Select
          helpText="selectHelpText"
          options={{ 1: 'Cookies', 2: 'Pizza', 3: 'Icecream' }}
        />
      </div>
    );

    const el2 = mount(
      <div>
        <Select
          helpText={{
            children: 'selectHelpText',
            validationMsg: true,
            persistent: true
          }}
          options={{ 1: 'Cookies', 2: 'Pizza', 3: 'Icecream' }}
        />
      </div>
    );

    expect(el.contains('selectHelpText')).toBe(true);
    expect(el2.contains('selectHelpText')).toBe(true);
    expect(el2.html().includes('mdc-select-helper-text--validation-msg')).toBe(
      true
    );
    expect(el2.html().includes('mdc-select-helper-text--persistent')).toBe(
      true
    );
  });

  it('can have empty placeholder', () => {
    const el = mount(
      <Select
        placeholder=""
        options={{ 1: 'Cookies', 2: 'Pizza', 3: 'Icecream' }}
      />
    );

    // make sure the label is not floating
    expect(el.html().includes('mdc-select__label--float-above')).toBe(false);

    // make sure we have 4 options
    expect(el.find('option').length).toBe(4);
  });

  it('can accept options array', () => {
    mount(<Select placeholder="Select a food" options={['1', '2', '3']} />);
  });

  it('can be outlined', () => {
    const el = mount(<Select outlined options={['1', '2', '3']} />);
    expect(el.html().includes('mdc-select--outlined')).toBe(true);
  });

  it('can accept formatted options array', () => {
    mount(
      <Select
        placeholder="Select a food"
        options={[
          {
            label: 'Cookies',
            value: '1'
          },
          {
            label: 'Pizza',
            value: '2',
            'aria-disabled': true,
            tabIndex: -1
          },
          {
            label: 'Icecream',
            value: '3'
          }
        ]}
      />
    );
  });

  it('can have a tab index', () => {
    const el = mount(<Select tabIndex={1} options={['1', '2', '3']} />);
    expect(!!~el.html().search('tabindex="1"')).toEqual(true);
  });

  it('can have custom rootProps', () => {
    mount(<Select rootProps={{ name: 'test' }} />);
  });

  it('can be disabled', () => {
    const selectInput = render(
      <Select disabled={false} options={['1', '2', '3']} />
    );

    expect(
      selectInput.container.getElementsByClassName('mdc-select--disabled')
    ).toHaveLength(0);

    selectInput.rerender(<Select disabled={true} options={['1', '2', '3']} />);

    expect(
      selectInput.container.getElementsByClassName('mdc-select--disabled')
    ).toHaveLength(1);
  });

  it('can have custom classnames', () => {
    const el = mount(
      <Select
        className={'my-custom-classname'}
        options={{ 1: 'Cookies', 2: 'Pizza', 3: 'Icecream' }}
      />
    );

    expect(
      el.find('.mdc-select').first().hasClass('my-custom-classname')
    ).toEqual(true);
  });

  it('can autofocus', () => {
    const { container } = render(
      <Select options={['one', 'two', 'three']} autoFocus />
    );
    expect(document.activeElement).toBe(container.querySelector('select'));
  });
});

describe('Select: Lifecycle', () => {
  const getLabel = (el: ReactWrapper) =>
    el.find('.mdc-select__selected-text').first().text().trim();

  it('SelectedText is blank with no value', () => {
    const el = mount(<Select options={['Cookies', 'Pizza', 'Icecream']} />);
    expect(el.html().trim()).toContain('value=""');
  });

  it('SelectedText is blank with no value, enhanced', () => {
    const el = mount(
      <Select enhanced options={['Cookies', 'Pizza', 'Icecream']} />
    );
    expect(getLabel(el)).toBe('');
  });

  it('SelectedText is blank with incorrect defaultValue', () => {
    const el = mount(
      <Select options={['Cookies', 'Pizza', 'Icecream']} defaultValue="Foo" />
    );
    expect(getLabel(el)).toBe('');
  });

  it('SelectedText is blank with incorrect defaultValue, enhanced', () => {
    const el = mount(
      <Select
        enhanced
        options={['Cookies', 'Pizza', 'Icecream']}
        defaultValue="Foo"
      />
    );
    expect(getLabel(el)).toBe('');
  });

  it('SelectedText is set to value', () => {
    const el = mount(
      <Select options={['Cookies', 'Pizza', 'Icecream']} value="Cookies" />
    );
    expect(el.html().trim()).toContain('value="Cookies"');
  });

  it('SelectedText is set to value, enhanced', () => {
    const el = mount(
      <Select
        enhanced
        options={['Cookies', 'Pizza', 'Icecream']}
        value="Cookies"
      />
    );
    expect(el.html().trim()).toContain('value="Cookies"');
  });

  it('SelectedText is set to default value', () => {
    const el = mount(
      <Select
        options={['Cookies', 'Pizza', 'Icecream']}
        defaultValue="Cookies"
      />
    );
    expect(el.html().trim()).toContain('value="Cookies"');
  });

  it('SelectedText is set to default value, enhanced', () => {
    const el = mount(
      <Select
        enhanced
        options={['Cookies', 'Pizza', 'Icecream']}
        defaultValue="Cookies"
      />
    );
    expect(el.html().trim()).toContain('value="Cookies"');
  });

  it('SelectedText is set with async value', (done) => {
    const el = mount(
      <Select options={['Cookies', 'Pizza', 'Icecream']} value="" />
    );

    setTimeout(() => {
      el.setProps({ value: 'Cookies' });
      expect(el.html().trim()).toContain('value="Cookies"');
      done();
    }, 100);
  });

  it('SelectedText is set with async value, enhanced', (done) => {
    const el = mount(
      <Select enhanced options={['Cookies', 'Pizza', 'Icecream']} value="" />
    );

    setTimeout(() => {
      el.setProps({ value: 'Cookies' });
      expect(el.html().trim()).toContain('value="Cookies"');
      done();
    }, 100);
  });
});
